--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "crons": [
     {
-      "path": "/api/cron",
-      "schedule": "0 0 * * *"
+      "path": "/api/cron?source=vercel&token=CRON_SECRET",
+      "schedule": "*/10 * * * *"
     }
   ]
 }
